--- a/frontend/src/app/components/hero/hero.html
+++ b/frontend/src/app/components/hero/hero.html
@@ -1,6 +1,6 @@
 <section id="home" class="hero">
   <div class="container">
-    <div class="hero-content">
+    <div class="hero-content" *ngIf="profileData; else loadingTemplate">
       <div class="hero-text">
         <h1 class="hero-title">{{ profileData.name }}</h1>
         <p class="hero-subtitle">{{ profileData.title }}</p>
@@ -14,9 +14,7 @@
         <div class="hero-social">
           <a [href]="profileData.github" target="_blank" class="social-link" title="GitHub">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path
-                d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
-              </path>
+              <path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path>
             </svg>
           </a>
           <a [href]="profileData.linkedin" target="_blank" class="social-link" title="LinkedIn">
@@ -28,9 +26,7 @@
           </a>
           <a [href]="profileData.twitter" target="_blank" class="social-link" title="Twitter">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-              <path
-                d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z">
-              </path>
+              <path d="M23 3a10.9 10.9 0 0 1-3.14 1.53 4.48 4.48 0 0 0-7.86 3v1A10.66 10.66 0 0 1 3 4s-4 9 5 13a11.64 11.64 0 0 1-7 2c9 5 20 0 20-11.5a4.5 4.5 0 0 0-.08-.83A7.72 7.72 0 0 0 23 3z"></path>
             </svg>
           </a>
         </div>
@@ -47,3 +43,9 @@
     <div class="scroll-line"></div>
   </div>
 </section>
+
+<ng-template #loadingTemplate>
+  <div class="hero-loading">
+    <p>Loading profile...</p>
+  </div>
+</ng-template>
